--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html>
+  <head>
     <meta charset="UTF-8">
     <title>Notes SPA</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <div id="app"></div>
-    <script type="text/javascript" src="build/bundle.js"></script>
-</body>
+  </head>
+  <body>
+  <script type="text/javascript" src="build/main.js"></script></body>
 </html>
