add pug-loader and create index file

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1.0, width=device-width">
     <title>Notes SPA</title>
   </head>
   <body>
+    <h1>Test pug</h1>
+    <div id="app"></div>
   <script type="text/javascript" src="build/main.js"></script></body>
 </html>
